# NMiner

./: CMakeLists.txt  README.md  index.d.ts  index.js  package.json
.github/workflows/: build.yml
src/: main.cpp
src/cpp/: job.cpp  job.h
src/js/: log.js  miner.js  pool.js
